--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aguafina+Script&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alatsi&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Bootstrap-4---Tabs-with-Arrows.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -24,14 +27,14 @@
 
 <body style="background: url(&quot;assets/img/bg.jpg&quot;);">
     <h1 class="text-center text-white d-none d-lg-block site-heading"><span class="text-lowercase text-primary site-heading-upper mb-3" style="font-family: 'Aguafina Script', serif;letter-spacing: 5px;color: rgb(81,63,40);">all kinds of nekos all over the world will gather around you</span><span class="site-heading-lower">Nekoparaiten</span></h1>
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" data-aos="fade" id="mainNav" style="background: url(&quot;assets/img/footer_back.png&quot;);">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" id="mainNav" style="background: url(&quot;assets/img/footer_back.png&quot;);">
         <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#" style="color: rgb(255,255,255);">Nekoparaiten</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <div class="col-xxl-2 offset-xxl-0"><img class="d-xxl-flex" src="assets/img/logo_en.png" style="width: 189px;"></div>
                 <div class="col-xxl-9 offset-xxl-0">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item" data-bss-hover-animate="pulse"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="font-size: 22px;">Home</a></li>
-                        <li class="nav-item" data-bss-hover-animate="rubberBand"><a class="nav-link" data-bss-hover-animate="pulse" href="#fraise" style="font-size: 22px;">Characters</a></li>
+                        <li class="nav-item" data-bss-hover-animate="rubberBand"><a class="nav-link" data-bss-hover-animate="pulse" href="#fraise" style="font-size: 22px;">Character</a></li>
                         <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="#download" style="font-size: 22px;">Download</a></li>
                         <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="contact.html" style="font-size: 22px;">Contact</a></li>
                     </ul>
@@ -76,9 +79,9 @@
             </div>
         </div>
     </section>
-    <footer class="text-center footer text-faded py-5">
+    <footer class="text-center footer text-faded py-5" style="background: url(&quot;assets/img/footer_back.png&quot;);">
         <div class="container">
-            <p class="m-0 small">©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</p>
+            <p class="m-0 small" style="font-family: Alatsi, sans-serif;">©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</p>
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
