--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Nekoparaiten</title>
-    <meta name="description" content="An anime neko romance simulation mobile game!">
+    <meta name="description" content="Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
@@ -32,10 +32,10 @@
                 <div class="col-xxl-2 offset-xxl-0"><img class="d-xxl-flex" src="assets/img/logo_en.png" style="width: 189px;"></div>
                 <div class="col-xxl-9 offset-xxl-0">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item" data-bss-hover-animate="pulse"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="font-size: 22px;">Home</a></li>
-                        <li class="nav-item" data-bss-hover-animate="rubberBand"><a class="nav-link" data-bss-hover-animate="pulse" href="#fraise" style="font-size: 22px;">Character</a></li>
-                        <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="#download" style="font-size: 22px;">Download</a></li>
-                        <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="contact.html" style="font-size: 22px;">Contact</a></li>
+                        <li class="nav-item" data-bss-hover-animate="pulse"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Home</a></li>
+                        <li class="nav-item" data-bss-hover-animate="rubberBand"><a class="nav-link" data-bss-hover-animate="pulse" href="#fraise" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Character</a></li>
+                        <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="#download" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Download</a></li>
+                        <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="https://github.com/nekoparaiten/nekoparaiten.github.io" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Development</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-xl-9 mx-auto">
                     <div class="text-center cta-inner rounded">
-                        <h2 class="section-heading mb-4"><span class="section-heading-upper">La soleil</span><span class="section-heading-lower">Nekoparaiten</span></h2>
+                        <h2 class="section-heading mb-4"><span class="section-heading-upper">La soleil</span><span class="text-break section-heading-lower">Nekoparaiten</span></h2>
                         <p class="mb-0">Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.<br>Creator: Sayori (NEKO WORKs)<br>Developed by Yostar Games<br></p>
                     </div>
                 </div>
