--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
-<body style="background: url(&quot;assets/img/bg.jpg&quot;);">
+<body style="background: url(&quot;assets/img/bg.jpg&quot;) repeat;background-size: auto;">
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" id="mainNav" style="background: url(&quot;assets/img/footer_back.png&quot;);">
         <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#" style="color: rgb(255,255,255);">Nekoparaiten</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <div class="col-xxl-2 offset-xxl-0"><img class="d-xxl-flex" src="assets/img/logo_en.png" style="width: 189px;"></div>
+            <div class="collapse navbar-collapse" data-bss-parallax-bg="true" id="navbarResponsive">
+                <div class="col-xxl-2 offset-xxl-0" data-aos="fade-left"><img class="d-xxl-flex" src="assets/img/icon4.png" style="width: 189px;"></div>
                 <div class="col-xxl-9 offset-xxl-0">
-                    <ul class="navbar-nav mx-auto">
+                    <ul class="navbar-nav mx-auto" data-aos="fade-up">
                         <li class="nav-item" data-bss-hover-animate="pulse"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Home</a></li>
                         <li class="nav-item" data-bss-hover-animate="rubberBand"><a class="nav-link" data-bss-hover-animate="pulse" href="#fraise" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Character</a></li>
                         <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="#download" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Download</a></li>
@@ -42,12 +42,12 @@
             </div>
         </div>
     </nav>
-    <h1 class="text-center text-white d-none d-lg-block site-heading"><span data-aos="fade" class="site-heading-lower"><img data-aos="fade-up" data-aos-duration="500" src="assets/img/nkprt%20logo.png"></span><span class="text-lowercase text-primary site-heading-upper mb-3" data-aos="flip-left" data-aos-duration="1000" style="font-family: 'Aguafina Script', serif;letter-spacing: 5px;color: rgb(81,63,40);">all kinds of nekos all over the world will gather around you</span></h1>
-    <section class="page-section cta">
+    <section data-bss-parallax-bg="true" class="page-section cta" style="background: linear-gradient(rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.25) 154%), url(&quot;assets/img/nkprtbg.jpg&quot;) center / cover;margin-top: 0px;">
+        <h1 class="text-center text-white d-none d-lg-block site-heading"><span data-aos="fade" class="site-heading-lower"><img class="swing animated" src="assets/img/nkprt%20logo.png"></span><span class="text-lowercase text-primary site-heading-upper mb-3" data-aos="flip-left" data-aos-duration="1000" style="font-family: 'Aguafina Script', serif;letter-spacing: 5px;color: rgb(81,63,40);text-shadow: 0px 0px 5px rgb(0,0,0);">all kinds of nekos all over the world will gather around you</span></h1>
         <div class="container">
             <div class="row">
-                <div class="col-xl-9 mx-auto">
-                    <div class="text-center cta-inner rounded">
+                <div class="col-xl-9 col-xxl-9 mx-auto">
+                    <div class="text-center cta-inner rounded" style="margin-top: 30px;">
                         <h2 class="section-heading mb-4"><span class="section-heading-upper">La soleil</span><span class="text-break section-heading-lower">Nekoparaiten</span></h2>
                         <p class="mb-0">Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.<br>Creator: Sayori (NEKO WORKs)<br>Developed by Yostar Games<br></p>
                     </div>
@@ -153,19 +153,19 @@
                                             </tr>
                                         </thead>
                                         <tbody class="text-center" style="border-top-width: 0px;">
-                                            <tr style="background: #262a38;">
+                                            <tr data-aos="fade-right" style="background: #262a38;">
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">iOS (12.4 or later)</td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">nkprt_iOS_v010b.ipa</td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">297 MB</td>
                                                 <td class="text-center align-middle" style="max-height: 60px;height: 60px;color: rgb(255,255,255);font-family: Alatsi, sans-serif;">0.1.0 (Beta)</td>
-                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" href="https://t.ly/TLbP" style="color: #00bdff;"><i class="far fa-eye"></i></a></td>
+                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bss-hover-animate="pulse" href="https://t.ly/TLbP" style="color: #00bdff;"><i class="far fa-eye"></i></a></td>
                                             </tr>
-                                            <tr style="background: #212430;">
+                                            <tr data-aos="fade-right" data-aos-delay="200" style="background: #212430;">
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">Android (10 or later)<br></td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">nkprt_Android_v010b.apk</td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">254 MB</td>
                                                 <td class="text-center align-middle" style="max-height: 60px;height: 60px;color: rgb(255,255,255);font-family: Alatsi, sans-serif;">0.1.0 (Beta)</td>
-                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" href="https://t.ly/xSYC" style="color: #00bdff;"><i class="far fa-eye"></i></a></td>
+                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bss-hover-animate="pulse" href="https://t.ly/xSYC" style="color: #00bdff;"><i class="far fa-eye"></i></a></td>
                                             </tr>
                                         </tbody>
                                     </table>
