--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-up" src="assets/img/Ch_cho_img_01.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/Ch_cho_img_01.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Chocola</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A cheerful and energetic Catgirl as Kashou himself describes her, 'happy-go-lucky'. She doesn't usually get upset, and even when she does, she often swings back to being as cheery as usual, though occasionally she can be genuinely sad about something.<br></p>
@@ -84,7 +84,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-up" src="assets/img/Ch_van_img_01.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/Ch_van_img_01.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Vanilla</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A quiet, calm and very stoic. She rarely expresses her emotions, making her a somewhat of a kūdere character, as opposed to her sister's energetic, playful personality.&nbsp;<br></p>
