--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Nekoparaiten</title>
-    <meta property="property" content="https://nekoparaiten.github.io/assets/img/nkprtbg.jpg">
+    <meta property="property" content="https://nekoparaiten.github.io/assets/img/nkprt_bg.jpg">
     <meta name="description" content="Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.">
-    <link rel="icon" type="image/jpeg" sizes="1009x1009" href="assets/img/nkprtfacico.jpg">
-    <link rel="icon" type="image/jpeg" sizes="1009x1009" href="assets/img/nkprtfacico.jpg">
-    <link rel="icon" type="image/jpeg" sizes="1009x1009" href="assets/img/nkprtfacico.jpg">
-    <link rel="icon" type="image/jpeg" sizes="1009x1009" href="assets/img/nkprtfacico.jpg">
-    <link rel="icon" type="image/jpeg" sizes="1009x1009" href="assets/img/nkprtfacico.jpg">
+    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
@@ -32,14 +32,14 @@
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
-<body style="background: url(&quot;assets/img/bg.jpg&quot;) repeat;background-size: auto;">
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" id="mainNav" style="background: url(&quot;assets/img/footer_back.png&quot;);">
+<body style="background: url(&quot;assets/img/la_soleil_bg.png&quot;) repeat;background-size: auto;">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" id="mainNav" style="background: url(&quot;assets/img/footer_bg.png&quot;);">
         <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#" style="color: rgb(255,255,255);">Nekoparaiten</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" data-bss-parallax-bg="true" id="navbarResponsive">
-                <div class="col-xxl-2 offset-xxl-0" data-aos="fade-left"><img class="d-xxl-flex" src="assets/img/icon4.png" style="width: 189px;"></div>
+                <div class="col-xxl-2 offset-xxl-0" data-aos="fade-left"><img class="d-xxl-flex" src="assets/img/nkprt_logo_2.png" style="width: 189px;"></div>
                 <div class="col-xxl-9 offset-xxl-0">
-                    <ul class="navbar-nav mx-auto" data-aos="fade-up">
-                        <li class="nav-item" data-bss-hover-animate="pulse"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Home</a></li>
+                    <ul class="navbar-nav mx-auto" data-aos="fade-down">
+                        <li class="nav-item" data-bss-hover-animate="pulse"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Introduction</a></li>
                         <li class="nav-item" data-bss-hover-animate="rubberBand"><a class="nav-link" data-bss-hover-animate="pulse" href="#fraise" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Character</a></li>
                         <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="#download" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Download</a></li>
                         <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="https://github.com/nekoparaiten/nekoparaiten.github.io" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Development</a></li>
@@ -48,14 +48,14 @@
             </div>
         </div>
     </nav>
-    <section data-bss-parallax-bg="true" class="page-section cta" style="background: linear-gradient(rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.25) 154%), url(&quot;assets/img/nkprtbg.jpg&quot;) center / cover;margin-top: 0px;">
-        <h1 class="text-center text-white d-none d-lg-block site-heading"><span data-aos="fade" class="site-heading-lower"><img class="swing animated" src="assets/img/nkprt%20logo.png"></span><span class="text-lowercase text-primary site-heading-upper mb-3" data-aos="flip-left" data-aos-duration="1000" style="font-family: 'Aguafina Script', serif;letter-spacing: 5px;color: rgb(81,63,40);text-shadow: 0px 0px 5px rgb(0,0,0);">all kinds of nekos all over the world will gather around you</span></h1>
+    <section data-bss-parallax-bg="true" class="page-section cta" style="background: linear-gradient(rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.25) 154%), url(&quot;assets/img/nkprt_bg.jpg&quot;) center / cover;margin-top: 0px;">
+        <h1 class="text-center text-white d-none d-lg-block site-heading"><span data-aos="fade" class="site-heading-lower"><img class="swing animated" src="assets/img/nkprt_logo.png"></span><span class="text-lowercase text-primary site-heading-upper mb-3" data-aos="flip-left" data-aos-duration="1000" style="font-family: 'Aguafina Script', serif;letter-spacing: 5px;color: rgb(81,63,40);text-shadow: 0px 0px 5px rgb(0,0,0);">all kinds of nekos all over the world will gather around you</span></h1>
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 col-xxl-9 mx-auto">
                     <div class="text-center cta-inner rounded" style="margin-top: 30px;">
-                        <h2 class="section-heading mb-4"><span class="section-heading-upper">La soleil</span><span class="text-break section-heading-lower">Nekoparaiten</span></h2>
-                        <p class="mb-0">Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.<br>Creator: Sayori (NEKO WORKs)<br>Developed by Yostar Games<br></p>
+                        <h2 class="section-heading mb-4"><span class="text-break section-heading-lower" style="font-family: Lora, serif;">Nekoparaiten</span></h2>
+                        <p class="mb-0" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.<br>Creator: Sayori (NEKO WORKs)<br>Developed by Yostar Games<br></p>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
     </section>
     <section id="fraise" class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/fraise2.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/fraise.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Fraise</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A talented young catgirl, but has little experience with social interaction. As such, she is very shy and not confident in her ingenuity. She is kind and puts her trust into others.<br></p>
@@ -74,7 +74,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/Ch_cho_img_01.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/chocola.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Chocola</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A cheerful and energetic Catgirl as Kashou himself describes her, 'happy-go-lucky'. She doesn't usually get upset, and even when she does, she often swings back to being as cheery as usual, though occasionally she can be genuinely sad about something.<br></p>
@@ -85,7 +85,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/Ch_van_img_01.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/vanilla.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Vanilla</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A quiet, calm and very stoic. She rarely expresses her emotions, making her a somewhat of a kūdere character, as opposed to her sister's energetic, playful personality.&nbsp;<br></p>
@@ -96,7 +96,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/Coconut-maid.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/coconut.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-right">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">coconut</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">As one of the younger Minaduki catgirls, Coconut is among the more emotional of them. Contrary to her outward appearance, she expresses a strong desire to be considered cute, rather than be known for her physical strength.<br></p>
@@ -107,7 +107,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/Azuki-maid.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/azuki.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-down">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">azuki</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">One of the most responsible of the Minaduki catgirls, often acting as their supervisor when helping to run La Soleil. However her brash personality often sees her come to blows with her sisters, in particular Coconut. Deep down however, she cares about her family and their well-being.<br></p>
@@ -118,7 +118,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/Mapple_Maid.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/maple.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Maple</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">The most independent and mature of the Minaduki catgirls, showing herself off as being refined yet at times haughty. She is extremely prideful, although her pride has at times been her downfall, as shown when buying her first guitar with Kashou which required his intervention to rescue her from herself.<br></p>
@@ -129,7 +129,7 @@
     </section>
     <section class="page-section clearfix">
         <div class="container">
-            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/Cinnamon_Maid.png">
+            <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/cinnamon.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Cinnamon</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A soft-spoken, polite, and cheerful. However as a kitten, Cinnamon was extremely shy to the point of hiding in the corner of her room and not speaking to anyone else, until Maple forcibly coerces her out of her shell.<br></p>
@@ -140,7 +140,7 @@
     </section>
     <div id="download">
         <div class="d-flex flex-column" id="content-wrapper" style="background: #2d2f3e;">
-            <div id="content" style="color: #2D2F3E;margin-top: -28px;">
+            <div data-bss-parallax-bg="true" id="content" style="color: #2D2F3E;margin-top: -28px;">
                 <div class="container-fluid" style="margin-bottom: 50px;height: 360.594px;margin-top: 76px;">
                     <h3 class="text-center text-white mb-4" style="font-size: 40px;font-family: 'Alegreya Sans', sans-serif;font-weight: bold;">Download</h3><small class="form-text" style="color: rgb(255,255,255);font-size: 18px;font-family: Alatsi, sans-serif;">This is a beta release. For iOS, click the URL to join a Testflight program and enroll for a beta testing. For Android, click the URL to download and install .apk app and activate a beta testing program.</small>
                     <div class="card" id="TableSorterCard" style="border-style: none;border-radius: 6.5px;margin-top: 37px;">
@@ -184,7 +184,7 @@
             <footer class="bg-white sticky-footer" style="background: linear-gradient(#1f232d 0%, #1f232d 100%);"></footer>
         </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
-    <footer class="text-center footer text-faded py-5" style="background: url(&quot;assets/img/footer_back.png&quot;);">
+    <footer class="text-center footer text-faded py-5" style="background: url(&quot;assets/img/footer_bg.png&quot;);">
         <div class="container">
             <p class="m-0 small" style="font-family: Alatsi, sans-serif;">©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</p>
         </div>
